release 1.1.5 (2010)

release 1.1.4 (2009-11)
- Fixed issue 371
  https://jersey.dev.java.net/issues/show_bug.cgi?id=371
  Logging of stack trace of mapped exceptions is not performed.
- Fixed issue 385
  https://jersey.dev.java.net/issues/show_bug.cgi?id=385
  Enable non-JAX-RS annotations on interface or abstract methods and
  parameters to be merged with the annotations on the concrete method and 
  parameters (if such annotations are not already declared).
- Fixed issue 383
  https://jersey.dev.java.net/issues/show_bug.cgi?id=383
  Singleton instances added to the set of singletons of the Application/
  ResourceConfig are not longer errornousaly instantiated by the runtime.
  The singleton reference is also available from the
  ResourceContent.getResource.
- Fixed issue 381
  https://jersey.dev.java.net/issues/show_bug.cgi?id=381
  Multiple child spring configuration fails may be declared as a value
  of the property SpringServlet.CONTEXT_CONFIG_LOCATION.
- Modified the Jersey test framework such that it is possible to override
  JerseyTest. The external test container supports the system property
  JERSEY_HOST_NAME to declare the host name for the base URI.

release 1.1.3-ea (2009-10-06)
- Support configuration of ResourceConfig using the provider interface
  com.sun.jersey.api.core.ResourceConfigurator.
  One or more ResourceConfigurator providers may be registered and the
  configure method will be called which may update the state of the
  ResourceConfig instance passed as a parameter.
- Support programmatic modification of the declaration of filters. See the
  following methods on ResourceConfig: getContainerRequestFilters,
  getContainerResponseFilters and getResourceFilterFactories.
- Support the resolving of a type variable, T say, to a concrete type for
  all parameters (field, method parameters, method setters) and
  return types of resource methods.
  Log warnings if T cannot be resolved to a concreate type, or if a